<resources>
    <string name="app_name">EnTurma</string>

    <string name="about">Sobre</string>
    <string name="report">Relatório de Turmas</string>
    <string name="compare">Comparar Turmas</string>
    <string name="ranking">Ranking de Turmas</string>
    <string name="contact">Contato</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_report">ReportActivity</string>

    <string name="hello_world">Hello world!</string>

    <string name="request_success">Pronto!</string>
    <string name="request_failure">Desculpe! Não foi possível estabelecer conexão com o servidor</string>

    <string name="years_prompt">Escolha um Ano</string>
    <string-array name="years_array">
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
    </string-array>



    <string name="states_prompt">Escolha um Estado</string>
    <string-array name="states_array">
        <item>AC</item>
        <item>AC</item>
        <item>AL</item>
        <item>AP</item>
        <item>AM</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MT</item>
        <item>MS</item>
        <item>MG</item>
        <item>PA</item>
        <item>PB</item>
        <item>PR</item>
        <item>PE</item>
        <item>PI</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RS</item>
        <item>RO</item>
        <item>RR</item>
        <item>SC</item>
        <item>SP</item>
        <item>SE</item>
        <item>TO</item>
    </string-array>

    <string name="grade_prompt">Escolha uma Turma</string>
    <string-array name="grades_array">
        <item>1° ano</item>
        <item>2° ano</item>
        <item>3° ano</item>
        <item>4° ano</item>
        <item>5° ano</item>
        <item>6° ano</item>
        <item>7° ano</item>
        <item>8° ano</item>
        <item>9° ano</item>
    </string-array>

    <string name="local_prompt">Escolha um Local</string>
    <string-array name="locals_array">
        <item>Total</item>
        <item>Urbana</item>
        <item>Rural</item>
    </string-array>

    <string name="network_prompt">Escolha uma Rede</string>
    <string-array name="network_array">
        <item>Total</item>
        <item>Privada</item>
        <item>Publica</item>
    </string-array>

    <string name="public_type_prompt">Escolha uma Fonte</string>
    <string-array name="public_type_array">
        <item>Total</item>
        <item>Municipal</item>
        <item>Estadual</item>
        <item>Federal</item>
    </string-array>

     <string name="ideb_description">  O Índice de Desenvolvimento da Educação Básica (Ideb) tem o objetivo de reunir em um único indicador dois conceitos importantes para a qualidade da educação: fluxo escolar e média de desempenho nas avaliações.

        Ele agrega ao enfoque pedagógico dos resultados das avaliações em larga escala do Inep a possibilidade de resultados sintéticos, facilmente assimiláveis, e que permitem traçar metas de qualidade educacional para os sistemas. O indicador é calculado a partir dos dados sobre aprovação, obtidos no Censo Escolar, e médias de desempenho nas avaliações do Inep: o Seab (para unidades da federação e para o país) e a Prova Brasil (para os municípios).</string>
    <string name="evasion_description">   O Índice de Evasão retrata o percentual de alunos que deixaram de frequentar a escola, caracterizando dessa forma abandono escolar.

        Tal índice é obtido por meio do Censo Escolar pelo Inep e compõe o Índice de Desenvolvimento da Educação Brasileira (Ideb).</string>
    <string name="performance_description">O Índice de Rendimento é baseado na Anresc. A Avaliação Nacional do Redimento Escolar (Anresc) é uma avaliação criada pelo Ministério da Educação. Sendo complementar ao Sistema Nacional de Educação Básica e um dos componentes para o cálculo do Índice de Desenvolvimento da Educação Básica, a avaliação é realizada a cada dois anos e participam todos os estudantes de escolas públicas urbanas do 5º ao 9º ano em turmas com 20 ou mais alunos.

        A avaliação é dividida em duas provas: Língua Portuguesa e Matemática.</string>
    <string name="distortion_description"> O Índice de Distorção representa o percentual de alunos que se encontram em condição de distorção idade-série.

        O aluno que reprova ou abandona os estudos por dois anos ou mais durante a trajetória de escolarização, repetindo por consequência uma mesma série, se encontra em defasem em relação à idade considerada adequada para cada ano de estudo, de acordo com o que propõe a legislação educacional do país.

        Neste caso o aluno será contabilizado na situação de distorção idade-série.</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
