<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="br.com.projetoenturma.enturma.CompareFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/first_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/btn_dropdown"
                    android:spinnerMode="dropdown"
                    android:entries="@array/years_array"
                    android:prompt="@string/years_prompt"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"/>
                <Spinner
                    android:id="@+id/first_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/btn_dropdown"
                    android:spinnerMode="dropdown"
                    android:entries="@array/states_array"
                    android:prompt="@string/states_prompt"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"
                    />

                <Spinner
                    android:id="@+id/first_grade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/btn_dropdown"
                    android:spinnerMode="dropdown"
                    android:entries="@array/grades_array"
                    android:prompt="@string/grade_prompt"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"/>

                <Spinner
                    android:id="@+id/first_local"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/btn_dropdown"
                    android:spinnerMode="dropdown"
                    android:entries="@array/locals_array"
                    android:prompt="@string/local_prompt"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"/>

                <Spinner
                    android:id="@+id/first_network"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/btn_dropdown"
                    android:spinnerMode="dropdown"
                    android:entries="@array/network_array"
                    android:prompt="@string/network_prompt"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"
                    />

                <Spinner
                    android:id="@+id/first_public_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/btn_dropdown"
                    android:spinnerMode="dropdown"
                    android:entries="@array/public_type_array"
                    android:prompt="@string/public_type_prompt"
                    android:visibility="invisible"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentRight="true">

                <Spinner
                    android:id="@+id/second_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/btn_dropdown"
                    android:spinnerMode="dropdown"
                    android:entries="@array/years_array"
                    android:prompt="@string/years_prompt"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_alignParentRight="true"/>
                <Spinner
                    android:id="@+id/second_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/btn_dropdown"
                    android:spinnerMode="dropdown"
                    android:entries="@array/states_array"
                    android:prompt="@string/states_prompt"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_alignParentRight="true" />

                <Spinner
                    android:id="@+id/second_grade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/btn_dropdown"
                    android:spinnerMode="dropdown"
                    android:entries="@array/grades_array"
                    android:prompt="@string/grade_prompt"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"/>

                <Spinner
                    android:id="@+id/second_local"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/btn_dropdown"
                    android:spinnerMode="dropdown"
                    android:entries="@array/locals_array"
                    android:prompt="@string/local_prompt"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"/>

                <Spinner
                    android:id="@+id/second_network"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/btn_dropdown"
                    android:spinnerMode="dropdown"
                    android:entries="@array/network_array"
                    android:prompt="@string/network_prompt"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"
                    />

                <Spinner
                    android:id="@+id/second_public_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/btn_dropdown"
                    android:spinnerMode="dropdown"
                    android:entries="@array/public_type_array"
                    android:prompt="@string/public_type_prompt"
                    android:visibility="invisible"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"/>
            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:id="@+id/send_report"
            android:text="Comparar" />
    </LinearLayout>


</FrameLayout>
